# cc-monitor-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README-CN.md  README.md  ROADMAP-CN.md  ROADMAP.md  build-linux.sh  build.sh  run_debug.sh  test_run.sh
.github/workflows/: builds.yml  main.yml  release.yml
docs/: LINUX_TRAY_DEPENDENCIES.md
packaging/: Info.plist  cc-monitor.desktop  cc_monitor.desktop
resources/: model_pricing.json
src/: app.rs  lib.rs  main.rs  test_simple.rs  tray.rs  ui_updates.rs
src/background/: mod.rs
src/i18n/: en.rs  ja.rs  mod.rs  zh.rs
src/monitor/: ccusage.rs  mod.rs  network.rs  stats.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
src/ui/: main_screen.rs  mod.rs  styles.rs
src/ui/widgets/: chart.rs  mod.rs  status_indicator.rs  usage_display.rs
src/utils/: logger.rs  mod.rs  model_pricing.rs  notifications.rs  preferences.rs  process.rs
